--- a/portable-crypto-js/package.json
+++ b/portable-crypto-js/package.json
@@ -4,7 +4,7 @@
   "description": "Password based encryption and decryption (with and without hmac), using only NodeJS's built-in `crypto`, which is tested to interoperate cleanly with it's counterpart Java library.  No dependencies.",
   "main": "portable-crypto.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"The maven Java project also tests this library in testing interoperability\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -13,7 +13,8 @@
   "keywords": [
     "password",
     "crypto",
-    "java"
+    "java",
+    "interop"
   ],
   "author": "Tim Boudreau",
   "license": "MIT",
