--- a/portable-crypto/pom.xml
+++ b/portable-crypto/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.mastfrog</groupId>
-        <artifactId>giulius-parent</artifactId>
+        <artifactId>mastfrog-parent</artifactId>
         <version>2.2.2</version>
     </parent>
     <artifactId>portable-crypto</artifactId>
