--- a/portable-crypto/pom.xml
+++ b/portable-crypto/pom.xml
@@ -33,6 +33,11 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>util-time</artifactId>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
