--- a/portable-crypto/pom.xml
+++ b/portable-crypto/pom.xml
@@ -1,10 +1,11 @@
-<?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.6.0</version>
+        <version>2.6.1</version>
     </parent>
     <artifactId>portable-crypto</artifactId>
     <url>https://github.com/timboudreau/portable-crypto</url>
@@ -63,8 +64,8 @@
         <url>https://github.com/timboudreau/portable-crypto.git</url>
         <connection>scm:git:https://github.com/timboudreau/portable-crypto.git</connection>
         <developerConnection>git@github.com/timboudreau/portable-crypto.git</developerConnection>
-    </scm>    
-<issueManagement>
+    </scm>
+    <issueManagement>
         <system>Github</system>
         <url>https://github.com/timboudreau/portable-crypto/issues</url>
     </issueManagement>
@@ -72,4 +73,4 @@
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
     </organization>
-    </project>
+</project>
