--- a/portable-crypto/pom.xml
+++ b/portable-crypto/pom.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.mastfrog</groupId>
         <artifactId>mastfrog-parent</artifactId>
-        <version>2.8.1</version>
+        <version>3.0.0-dev</version>
     </parent>
     <artifactId>portable-crypto</artifactId>
     <url>https://github.com/timboudreau/portable-crypto</url>
@@ -40,11 +43,13 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+
     <licenses>
         <license>
             <name>MIT</name>
@@ -52,6 +57,7 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
     <developers>
         <developer>
             <name>Tim Boudreau</name>
@@ -60,6 +66,7 @@
         </developer>
     </developers>
     <inceptionYear>2018</inceptionYear>
+
     <scm>
         <url>https://github.com/timboudreau/portable-crypto.git</url>
         <connection>scm:git:https://github.com/timboudreau/portable-crypto.git</connection>
@@ -69,6 +76,7 @@
         <system>Github</system>
         <url>https://github.com/timboudreau/portable-crypto/issues</url>
     </issueManagement>
+
     <organization>
         <name>Mastfrog Technologies</name>
         <url>https://mastfrog.com</url>
